Fix red on red contrast issues and never ending res BS

--- a/_colors.scss
+++ b/_colors.scss
@@ -12,7 +12,7 @@ $link-color: #fafafa;
 $header-background-color: #000000;
 
 $link-domain-color: #4e0a0a;
-$link-buttons-color: $red2;
+$link-buttons-color: #877e54;
 $link-sticky-title-color: #6ac300;
 $link-sticky-title-visited-color: #81a210;
 $link-title-border-color: $red5;
